# DistributedJobs

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  DistributedJobs  coordinator.hpp  executor.cpp  executor.hpp  last_ses  message.cpp  message.hpp  node.cpp  node.hpp  pipeline.cpp  pipeline.hpp  pipelines.hpp  task.cpp  task.hpp  template_utils.hpp
src/examples/: CMakeLists.txt
src/examples/complex_add/: complex_add.cpp
src/examples/graph_stream_triangle_count/: graph_stream_triangle_count.cpp
src/examples/graph_stream_triangle_count/utils/: graph_generate.cpp
src/examples/map_recur_example/: map_recur_example.cpp
src/examples/map_reduce_bfs/: graph_generator.cpp  map_reduce_bfs.cpp  readme
src/examples/simple_add/: simple_add.cpp
src/tests/: CMakeLists.txt  serialization_test.cpp  task_test.cpp
